@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.21 
+    Translation of CVS Revision: 1.22 
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -48,11 +48,11 @@
 </div>
 
 <div style="overflow: hidden">
-<p class="boxout boxoutright"> 
-<img src="@IMAGES@/darius-blasband.jpeg">
-<br>
-Le compositeur Darius Blasband &eacute;tudiant une
-partition LilyPond.</p>
+<p class="boxout boxoutright"> <img
+src="@IMAGES@/darius-blasband.jpeg"> <br> Le Compositeur Darius Blasband
+travaillant une partition LilyPond durant l'enregistrement de <a
+href="http://www.thelegendofthetoad.com/">La l&eacute;gende du
+crapaud</a>.</p>
 
 <p>
   &ldquo; [..Apr&egrave;s la premi&egrave;re r&eacute;p&eacute;tition d'orchestre] 
