@@ -1,3 +1,7 @@
+2005-06-24  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/switch/testimonials: update
+
 2005-06-23  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
 	* fr/: updates (Han-Wen's changes translations)
